Implement batch endpoint
