# keyconnect-server/src/main/java/app/keyconnect/server/controllers/BlockchainAccountController.java
@@ -1,5 +1,7 @@
 package app.keyconnect.server.controllers;
 
+import app.keyconnect.api.client.model.AccountsInfoRequest;
+import app.keyconnect.api.client.model.AccountsInfoResponse;
 import app.keyconnect.server.gateways.exceptions.UnknownNetworkException;
 import app.keyconnect.api.client.model.BlockchainAccountInfo;
 import app.keyconnect.api.client.model.BlockchainAccountPayments;
@@ -10,6 +12,8 @@ import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
